将cup11b的jar包上传到仓库，同时更新pom.xml，使用了mvn install将11b的版本更新到本地仓库。

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>edu.princeton.cup</groupId>
 			<artifactId>java-cup</artifactId>
-			<version>10k</version>
+			<version>11b</version>
 		</dependency>
 
 		<dependency>
